--- a/index.html
+++ b/index.html
@@ -42,26 +42,32 @@
     <main>
         <div class="main">
             <h2>Some Random imformation.</h2>
-            <div>
-                <div>
-                    <div>1</div>
-                    <p>this is some subtext under an illustration or image</p>
+            <div class="container">
+
+                <div class="outer-box">
+                    <div class="inner-box"></div>
+                    <p class="pr">This is some subtext under an illustation or image</p>
                 </div>
-                <div>
-                    <div>2</div>
-                    <p>this is some subtext under an illustration or image</p>
+
+                <div class="outer-box">
+                    <div class="inner-box"></div>
+                    <p class="pr">This is some subtext under an illustation or image</p>
                 </div>
-                <div>
-                    <div>3</div>
-                    <p>this is some subtext under an illustration or image</p>
+
+
+                <div class="outer-box">
+                    <div class="inner-box"></div>
+                    <p class="pr">This is some subtext under an illustation or image</p>
                 </div>
-                <div>
-                    <div>4</div>
-                    <p>this is some subtext under an illustration or image</p>
+
+                <div class="outer-box">
+                    <div class="inner-box"></div>
+                    <p class="pr">This is some subtext under an illustation or image</p>
                 </div>
                 
             </div>
         </div>
+
         <div>
             <p>This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <h6>-Thor, God of Thunder</h6>
