--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </div>
         </div>
 
-        <div>
-            <p>This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <h6>-Thor, God of Thunder</h6>
+        <div class="container2">
+            <p class="pr2">This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <h6 class="thor">-Thor, God of Thunder</h6>
         </div>
         <div>
             <div>
