--- a/index.html
+++ b/index.html
@@ -72,13 +72,16 @@
             <p class="pr2">This is an inspiration quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <h6 class="thor">-Thor, God of Thunder</h6>
         </div>
-        <div>
-            <div>
+        <div class="container3">
+            <div class="inner-container3">
                 <h4>
                     Call to action! It's time!
                 </h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign up</button>
+                <div class="inner-box4">
+                    <p class="pr3">Sign up for our product by clicking that button right over there!</p>
+                    <button class="but2">Sign up</button>
+                </div>
+               
             </div>
         </div>
     </main>
