--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <p>
             Copyright &copy; The Odin Project 2024
         </p>
